# rocket-rust-react-boilerplate

./: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
docs/: scripts.md
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
src/: main.tsx
src/components/Elements/: index.ts
src/components/Elements/Loader/: atom.css  atomicLoader.tsx  index.tsx
src/components/Elements/button/: button.tsx
src/components/Elements/navbar/: navbar.tsx
src/components/Layout/: Layout.tsx  Logo.tsx
src/components/Layout/Footer/: Copywrite.tsx
src/pages/: AboutPage.tsx  HomePage.tsx  TestPage.tsx
