# [[bin]]
# name = "tsync"
# path = ".cargo/bin/tsync.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[package]
name = "app"
default-run = "server"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
tsync = "1.2.1"
futures-util = "0.3.21"
bytes = "1.2.1"
futures = "0.3.24"
env_logger = "0.9.0"
serde_derive = "1.0.144"
json = "0.12.4"
console = "0.15.1"
log = "0.4.17"
axum = "0.5.15"
tower = "0.4.13"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
clap = { version = "^3", features = ["derive"] }

[dependencies.tower-http]
features = ["full"]
version = "0.3.4"

[dependencies.axum-extra]
features = ["spa"]
version = "^0.3.7"

[dependencies.serde]
features = ["derive"]
version = "1.0.133"

[dependencies.tokio]
features = ["full"]
version = "1"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = false     # remove symbols from binary?
opt-level = 3     # change optimization level 0,1,2,3,"s","z"
lto = true        # enable link time optimizations
codegen-units = 1 # maximize size reduction optimizations
